Started working on Leaflet integration

--- a/example/d3.html
+++ b/example/d3.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Backbone.GoogleMaps | Example</title>
+		<title>Backbone.Maps | Example</title>
 		<style type="text/css">
 			html {
 				height: 100%
@@ -79,8 +79,7 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js"></script>
-		<script type="text/javascript" src="../dist/backbone.maps.min.js"></script>
-		<script type="text/javascript" src="../dist/backbone.maps-d3.min.js"></script>
+		<script type="text/javascript" src="../dist/backbone.maps.google.min.js"></script>
 		<script type="text/javascript" src="js/d3.js"></script>
 	</body>
 </html>
