--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Backbone.GoogleMaps | Example</title>
+		<title>Backbone.Maps | Example</title>
 	</head>
 	<body>
 		<p><b>Simple example:</b> <a href="simple.html">click here</a></p>
