--- a/example/complex.html
+++ b/example/complex.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Backbone.GoogleMaps | Example</title>
+		<title>Backbone.Maps | Example</title>
 		<style type="text/css">
 			html {
 				height: 100%
@@ -78,7 +78,7 @@
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
-		<script type="text/javascript" src="../dist/backbone.maps.min.js"></script>
+		<script type="text/javascript" src="../dist/backbone.maps.google.min.js"></script>
 		<script type="text/javascript" src="js/complex.js"></script>
 	</body>
 </html>
