--- a/example/leaflet.html
+++ b/example/leaflet.html
@@ -16,6 +16,7 @@
 				height: 100%
 			}
 		</style>
+		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 	</head>
 	<body>
 		<!-- TEMPLATE: InfoWindow ============================== -->
@@ -25,11 +26,11 @@
 			<p>Longitude: <%=lng %></p>
 		</script>
 		<div id="map_canvas" style="width:100%; height:100%"></div>
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+		<script type="text/javascript" src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
-		<script type="text/javascript" src="../dist/backbone.maps.google.min.js"></script>
-		<script type="text/javascript" src="js/simple.js"></script>
+		<script type="text/javascript" src="../dist/backbone.maps.leaflet.min.js"></script>
+		<script type="text/javascript" src="js/leaflet.js"></script>
 	</body>
 </html>
