--- a/example/index.html
+++ b/example/index.html
@@ -2,12 +2,22 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Backbone.Maps | Example</title>
+		<title>Examples | Backbone.Maps</title>
 	</head>
 	<body>
-		<p><b>Simple example:</b> <a href="simple.html">click here</a></p>
-		<p><b>More complex example:</b> <a href="complex.html">click here</a></p>
-		<p><b>Custom icons example:</b> <a href="custom-icons.html">click here</a></p>
-		<p><b>Example with D3:</b> <a href="d3.html">click here</a></p>
+		<h1>Backbone.Maps Examples</h1>
+		<hr>
+		<h3>Google Maps</h3>
+		<p><b>Simple example:</b> <a href="google/simple.html">click here</a></p>
+		<p><b>More complex example:</b> <a href="google/complex.html">click here</a></p>
+		<p><b>Custom icons example:</b> <a href="google/custom-icons.html">click here</a></p>
+		<p><b>Example with D3:</b> <a href="google/d3.html">click here</a></p>
+		<hr>
+		<h3>Leaflet</h3>
+		<p><b>Simple example:</b> <a href="leaflet/simple.html">click here</a></p>
+		<p><b>More complex example:</b> <a href="leaflet/complex.html">click here</a></p>
+		<p><b>Custom icons example:</b> <a href="leaflet/custom-icons.html">click here</a></p>
+		<p><b>Example with D3:</b> <a href="leaflet/d3.html">click here</a></p>
+		<hr>
 	</body>
 </html>
