Working on Leaflet integration

--- a/example/leaflet/complex.html
+++ b/example/leaflet/complex.html
@@ -179,7 +179,7 @@
 
 			App.MuseumMarker = App.MarkerView.extend({
 				overlayOptions: {
-					draggable: true,
+					draggable: false,
 					icon: museumIcon
 				}
 			});
@@ -190,7 +190,7 @@
 
 			App.BarMarker = App.MarkerView.extend({
 				overlayOptions: {
-					draggable: true,
+					draggable: false,
 					icon: beerIcon
 				}
 			});
